--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
   </head>
   <body>
     <h1>May Node and Express be with you.</h1>
+    <form action="/posts" method="POST">
+      <input type="text" placeholder="Title" name="title">
+      <input type="text" placeholder="Activity Name" name="activityName">
+      <input type="text" placeholder="body" name="body">
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
